--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.3",
+    "react-search": "^2.1.1",
+    "react-select": "^4.3.1",
     "recharts": "^2.0.10",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
