--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "engines": {
-    "node": "14.16.1"
+    "node": "14.16.1",
+"npm": "6.14"
   },
   "version": "0.1.0",
   "private": true,
